--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -1,8 +1,36 @@
 .intro {
   font-family: var(--accent-font);
   line-height: 1;
+  color: #ffffff;
+  background-image: url("../../img/cat-background-mobile@1.jpg");
+  background-repeat: no-repeat;
+  background-position: top center;
+
+  &::before  {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 302px;
+    background-color: var(--accent-color);
+    opacity: 0.85;
+  }
 }
 
 .intro__description {
   text-transform: uppercase;
+  margin-bottom: 29px;
+}
+
+.intro__container {
+  position: relative;
+  padding: 27px 0 20px 0;
+  text-align: center;
+  z-index: 1;
+}
+
+.intro__title {
+  margin:0 0 25px 0;
+  color: inherit;
+  font-weight: 400;
+  font-stretch: extra-condensed;
 }
