--- a/source/sass/blocks/show.scss
+++ b/source/sass/blocks/show.scss
@@ -1,7 +1,62 @@
+.show {
+  padding: 39px 0 25px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  &::before,
+  &::after {
+    content: "";
+    width: 30px;
+    height: 2px;
+    background-color: #d3d3d3;
+    order: -1;
+  }
+  &::before {
+    transform: rotate(90deg);
+  }
+
+  @media #{$not-mobile} {
+    padding: 164px 37px 38px 38px;
+  }
+}
+
 .show__title {
+  @include title;
+  --size: 16px;
+  --line: 1.25;
+  text-transform: uppercase;
+  position: relative;
   color: #111111;
+  margin: 37px 0 8px 0;
+
+  @media #{$not-mobile} {
+    --size: 20px;
+    --line: 1.1;
+    margin: 79px 0 23px 0;
+  }
 }
 
 .show__description {
-  font-size: 12px;
+  @include text;
+  --size: 12px;
+  margin-bottom: 21px;
+
+  @media #{$not-mobile} {
+    --size: 16px;
+    --line: 1.13;
+    margin-bottom: 87px;
+  }
+}
+
+.show__link {
+  @include link;
+  --size: 16px;
+  --line: 1.25;
+  text-transform: uppercase;
+  padding: 10px;
+  width: 100%;
+  background-color: #f2f2f2;
+  color: var(--additional-color);
+  text-align: center;
 }
