--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -1,6 +1,6 @@
 :root {
-  --main-font: "Lato", sans-serif;
-  --accent-font: "Oswald", sans-serif;
+  --main-font: "Lato", "Arial", sans-serif;
+  --accent-font: "Oswald", "Arial", sans-serif;
   --main-color: #000000;
   --additional-color: #444444;
   --accent-color: #68b738;
