--- a/source/sass/blocks/input.scss
+++ b/source/sass/blocks/input.scss
@@ -1,20 +1,29 @@
 .input {
+  --color: #e7e7e7;
   padding: 14px 20px 13px 20px;
   font-family: var(--accent-font);
   font-size: 16px;
   line-height: 1.13;
   text-transform: uppercase;
   color: var(--additional-color);
+  border: solid 1px var(--color);
+
+  @media #{$not-mobile} {
+    font-size: 20px;
+    line-height: 1.5;
+    padding: 10px 20px;
+  }
 }
 
 .input--radio {
+  --color: #cdcdcd;
   padding: 0;
   width: 18px;
   height: 18px;
   appearance: none;
   border-radius: 50%;
   border: solid 1px transparent;
-  outline: solid 1px #cdcdcd;
+  outline: solid 1px var(--color);
   outline-offset: 11px;
   transition-duration: 140ms;
   transition-timing-function: ease-in-out;
@@ -30,6 +39,7 @@
 }
 
 .input--checkbox {
+  --color: #cdcdcd;
   display: grid;
   justify-content: center;
   align-items: center;
@@ -37,7 +47,7 @@
   width: 30px;
   height: 30px;
   appearance: none;
-  border: solid 1px #cdcdcd;
+  border: solid 1px var(--color);
   transition-duration: 140ms;
   transition-timing-function: ease-in-out;
   flex-shrink: 0;
@@ -54,4 +64,7 @@
 
 .input--textarea {
   resize: none;
+  padding: 9px 12px 9px 15px;
+  height: 150px;
+  border: solid 1px var(--color);
 }
