--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -1,36 +1,121 @@
 .intro {
   font-family: var(--accent-font);
   line-height: 1;
-  color: #ffffff;
-  background-image: url("../../img/cat-background-mobile@1.jpg");
-  background-repeat: no-repeat;
-  background-position: top center;
 
-  &::before  {
+  &::before {
     position: absolute;
-    content: "";
     width: 100%;
     height: 302px;
     background-color: var(--accent-color);
     opacity: 0.85;
+  }
+
+  @media #{$mobile-only} {
+    color: #ffffff;
+    background-image: url("../img/cat-background-mobile@1.jpg");
+    background-repeat: no-repeat;
+    background-position: top center;
+
+    &::before {
+      content: "";
+    }
+  }
+
+  @media #{$desktop-only} {
+    &::after {
+      content: "";
+      position: absolute;
+      width: 720px;
+      height: 694px;
+      left: 50%;
+      top: 0;
+      background-image: url("../img/cat-background-desktop@1.jpg");
+      background-repeat: no-repeat;
+      z-index: -2;
+    }
+
+    &::before {
+      content: "";
+      height: 694px;
+      top: 0;
+      left: 50%;
+      z-index: -1;
+    }
+  }
+}
+
+.intro__container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  position: relative;
+  padding: 27px 0 20px 0;
+  text-align: center;
+  z-index: 1;
+
+  @media #{$not-mobile} {
+    position: relative;
+    text-align: left;
+    padding: 51px 0 526px 88px;
+  }
+
+  @media #{$desktop-only} {
+    padding: 158px 0 267px 80px;
   }
 }
 
 .intro__description {
   text-transform: uppercase;
   margin-bottom: 29px;
-}
 
-.intro__container {
-  position: relative;
-  padding: 27px 0 20px 0;
-  text-align: center;
-  z-index: 1;
+  @media #{$not-mobile} {
+    font-size: 20px;
+    margin-bottom: 40px;
+  }
 }
 
 .intro__title {
-  margin:0 0 25px 0;
+  @include title;
+  margin: 0 0 25px 0;
   color: inherit;
-  font-weight: 400;
   font-stretch: extra-condensed;
+
+  @media #{$not-mobile} {
+    --size: 60px;
+  }
+}
+
+.intro__image {
+  @include img;
+}
+
+.intro__button {
+  @include link;
+  @include button;
+  width: 244px;
+
+  @media #{$mobile-only} {
+    order: 1;
+    width: 100%;
+  }
+
+  @media #{$not-mobile} {
+    --size: 20px;
+  }
+}
+
+.intro__image-wrapper {
+  @media #{$not-mobile} {
+    position: absolute;
+    width: 709px;
+    height: 609px;
+    top: 245px;
+    left: 0;
+    z-index: -1;
+  }
+
+  @media #{$desktop-only} {
+    top: 80px;
+    left: 450px;
+  }
 }
