--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -1,3 +1,59 @@
+.map {
+  @media #{$desktop-only} {
+    position: relative;
+  }
+}
+
+.map--inner {
+  @media #{$not-desktop} {
+    background-color: #f2f2f2;
+  }
+}
+
 .map__container {
   display: flex;
+  --gap: 15px;
+  gap: var(--gap);
+  padding: 26px 0;
+  align-items: flex-start;
+  justify-content: space-between;
+
+  @media #{$not-mobile} {
+    --gap: 296px;
+    padding: 56px 40px;
+  }
+
+  @media #{$desktop-only} {
+    position: absolute;
+    background-color: #ffffff;
+    top: 95px;
+    padding: 58px 60px 55px 80px;
+    --gap: 114px;
+  }
+}
+
+.map__title {
+  @include title;
+  margin: 0;
+  --size: 16px;
+  --line: 1.25;
+  text-transform: uppercase;
+
+  @media #{$not-mobile} {
+    --size: 20px;
+  }
+}
+
+.map__wrapper {
+  line-height: 0;
+  background-color: #f2f2f2;
+}
+
+.map__image {
+  @include img;
+  width: 100%;
+}
+
+.map__address {
+  text-align: right;
 }
