--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -1,4 +1,28 @@
 .page-footer {
   position: sticky;
   top: 100vh;
+  background-color: #f2f2f2;
+}
+
+.page-footer__container {
+  padding: 40px 0;
+  --gap: 13px;
+  display: grid;
+  gap: var(--gap);
+  grid-template-columns: repeat(var(--column-count, 1), 1fr);
+
+  @media #{$not-mobile} {
+    --column-count: 3;
+  }
+}
+
+.page-footer__social-list {
+  @include reset-list;
+  width: 132px;
+  height: 22px;
+  background-color: #ff0000;
+}
+
+.page-footer__logo {
+  @include link;
 }
