--- a/source/sass/blocks/special-offer.scss
+++ b/source/sass/blocks/special-offer.scss
@@ -1,4 +1,59 @@
+.special-offer {
+  position: relative;
+  background-image: url("../img/cat-catalog-bag-mobile@1.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 280px;
+  height: 290px;
+
+  &::before {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 290px;
+    background-color: var(--accent-color);
+    opacity: 0.85;
+    top: 0;
+    left: 0;
+  }
+
+  @media #{$not-mobile} {
+    background-image: url("../img/cat-catalog-bag-tablet@1.jpg");
+    width: 100%;
+    height: 200px;
+
+    &::before {
+      height: 200px;
+    }
+  }
+
+  @media #{$desktop-only} {
+    grid-column: 2/3;
+    background-image: url("../img/cat-catalog-bag-desktop@1.jpg");
+    height: 289px;
+
+    &::before {
+      max-width: 250px;
+      height: 289px;
+    }
+  }
+}
+
 .special-offer__text {
+  margin: 0;
+  padding: 186px 61px 43px 58px;
+  position: relative;
   font-size: 16px;
   line-height: 1.25;
+  color: #ffffff;
+  z-index: 1;
+  text-align: center;
+
+  @media #{$not-mobile} {
+    padding: 71px 124px 69px 422px;
+  }
+
+  @media #{$desktop-only} {
+    padding: 185px 43px 42px 40px;
+  }
 }
