--- a/source/sass/blocks/additional-card.scss
+++ b/source/sass/blocks/additional-card.scss
@@ -8,7 +8,6 @@
   border-bottom: solid 1px #cdcdcd;
 
   @media #{$not-mobile} {
-    --column-count: 3;
     --gap: 25px;
     grid-template-columns: 3fr 1fr 0.5fr;
     padding: 26px 38px 28px 38px;
@@ -16,7 +15,6 @@
 
   @media #{$desktop-only} {
     padding: 15px 0 17px 0;
-    --column-count: 4;
     --gap: 40px;
     grid-template-columns: 1fr 1fr auto 1fr;
     align-items: center;
@@ -44,6 +42,7 @@
 }
 
 .additional-card__button {
+  @include link;
   @include button;
   grid-column: 1/-1;
   margin-top: 2px;
