--- a/source/sass/blocks/additional.scss
+++ b/source/sass/blocks/additional.scss
@@ -5,7 +5,7 @@
     --gap: 80px;
     display: grid;
     gap: var(--gap);
-    grid-template-columns: 80% 20%;
+    grid-template-columns: calc(100% - 80px - 20%) 20%;
   }
 }
 
