--- a/source/sass/blocks/address.scss
+++ b/source/sass/blocks/address.scss
@@ -1,14 +1,14 @@
 .address {
   font-style: normal;
   line-height: 1.4;
-  color: var(--additional-color);
+  color: $dark-gray;
 }
 
 .address__text {
   display: block;
 
   @media #{$not-mobile} {
-    &--city {
+    &:last-child {
       margin-top: 20px;
     }
   }
