--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -1,18 +1,19 @@
 .intro {
-  font-family: var(--accent-font);
+  font-family: $accent-font;
   line-height: 1;
 
   &::before {
     position: absolute;
     width: 100%;
     height: 302px;
-    background-color: var(--accent-color);
+    background-color: $green;
     opacity: 0.85;
   }
 
   @media #{$mobile-only} {
     color: #ffffff;
-    background-image: url("../img/cat-background-mobile@1.jpg");
+    background: url("../img/cat-background-mobile@1.jpg"), linear-gradient(to right, #504f55, #434348);
+    background-size: auto 302px;
     background-repeat: no-repeat;
     background-position: top center;
 
@@ -45,6 +46,7 @@
 }
 
 .intro__container {
+  @include centerer;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
