--- a/source/sass/blocks/main-navigation.scss
+++ b/source/sass/blocks/main-navigation.scss
@@ -1,54 +1,40 @@
 .main-navigation {
   text-align: center;
-}
 
-.main-navigation__list {
-  @include reset-list;
-  margin: 0;
-  position: absolute;
-  width: 100%;
-  min-height: 65px;
-  background-color: #ffffff;
-  top: 65px;
-  left: 0;
-  z-index: 2;
+  @media #{$mobile-only} {
+    display: none;
 
-  &--close {
-    @media #{$mobile-only} {
-      display: none;
-
-      ~ .main-navigation__toggle::before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 24px;
-        height: 2px;
-        background-color: #000000;
-        box-shadow: 0 6px 0 0 #000000, 0 12px 0 0 #000000;
-      }
-    }
-
-    @media #{$not-mobile} {
-      position: relative;
+    + .main-navigation__toggle::before {
+      content: "";
+      position: absolute;
       top: 0;
-      display: flex;
-      flex-wrap: wrap;
-      gap: 32px;
-      background-color: transparent;
+      left: 0;
+      width: 24px;
+      height: 2px;
+      background-color: #000000;
+      box-shadow: 0 6px 0 0 #000000, 0 12px 0 0 #000000;
     }
   }
 
   &--opened {
     @media #{$mobile-only} {
-      ~ .main-navigation__toggle {
+      display: block;
+      position: absolute;
+      width: 100%;
+      min-height: 65px;
+      background-color: #ffffff;
+      top: 65px;
+      left: 0;
+      z-index: 2;
+
+      + .main-navigation__toggle {
         background-color: #ffffff;
 
         &::before,
         &::after {
           content: "";
-          right: 1px;
-          top: 6px;
+          right: 0;
+          top: 0;
           position: absolute;
           width: 25px;
           height: 2px;
@@ -64,21 +50,38 @@
           transform: rotate(-45deg);
         }
       }
-    }
 
-    &:first-child {
-      border-top: solid 1px #e6e6e6;
+      .main-navigation__list {
+        &:first-child {
+          border-top: solid 1px #e6e6e6;
+        }
+      }
     }
   }
+}
 
-  &--nojs {
+.main-navigation__list {
+  @include reset-list;
+  margin: 0;
+
+  @media #{$not-mobile} {
     position: relative;
+    top: 0;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 32px;
+    background-color: transparent;
+  }
+}
 
-    @media #{$mobile-only} {
-      display: block;
+.main-navigation__list--main {
+  .main-navigation__link {
+    @media #{$desktop-only} {
+      color: #ffffff;
+      background-color: transparent;
 
-      ~ .main-navigation__toggle {
-        display: none;
+      &[aria-current="step"] {
+        text-decoration-color: #ffffff;
       }
     }
   }
@@ -93,17 +96,19 @@
   border-bottom: solid 1px #e6e6e6;
 
   @media #{$not-mobile} {
-    font-family: var(--accent-font);
+    font-family: $accent-font;
     font-weight: 400;
     font-size: 18px;
     line-height: 1.3;
     border: none;
   }
 
-  &--main {
-    @media #{$desktop-only} {
-      color: #ffffff;
-      background-color: transparent;
+  &[aria-current="step"] {
+    pointer-events: none;
+
+    @media #{$not-mobile} {
+      text-decoration: underline 2px $green;
+      text-underline-offset: 10px;
     }
   }
 }
@@ -114,6 +119,7 @@
   display: none;
 
   @media #{$mobile-only} {
+    @include shape;
     top: 0;
     right: 0;
     z-index: 2;
