--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -5,7 +5,8 @@
 }
 
 .page-footer__container {
-  padding: 40px 0;
+  @include centerer;
+  padding: 20px 0 40px 0;
   --gap: 13px;
   display: grid;
   gap: var(--gap);
@@ -13,16 +14,33 @@
 
   @media #{$not-mobile} {
     --column-count: 3;
+    justify-content: center;
   }
 }
 
 .page-footer__social-list {
   @include reset-list;
-  width: 132px;
-  height: 22px;
-  background-color: #ff0000;
+  margin: 0;
+  padding: 20px 0;
+  min-height: 62px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  justify-content: center;
+
+  @media #{$mobile-only} {
+    border-top: solid 1px #d9d9d9;
+    border-bottom: solid 1px #d9d9d9;
+  }
 }
 
 .page-footer__logo {
   @include link;
+  text-align: center;
+  margin-right: 80px;
+  align-self: center;
+
+  @media #{$not-mobile} {
+    text-align: start;
+  }
 }
