--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -10,6 +10,18 @@
     align-items: end;
     padding: 8px 37px 39px 39px;
     --gap: 34px;
+    position: relative;
+
+    &::before {
+      position: absolute;
+      content: "";
+      width: 100%;
+      height: calc(100% - 80px);
+      top: 80px;
+      left: 0;
+      background-color: $gray;
+      z-index: -1;
+    }
   }
 }
 
@@ -20,18 +32,26 @@
   --size: 16px;
   --line: 1.25;
   text-transform: uppercase;
+  max-width: 90px;
 
   @media #{$not-mobile} {
     --size: 20px;
     --line: 1.2;
     text-align: center;
+    margin: auto;
     margin-bottom: 21px;
+    max-width: 150px;
   }
 }
 
 .product-card__characteristic-wrapper {
   display: flex;
   justify-content: space-between;
+
+  @media #{$not-mobile} {
+    padding: 7px 0 9px 0;
+    border-bottom: solid 1px #cdcdcd;
+  }
 }
 
 .product-card__image {
@@ -39,6 +59,7 @@
 }
 
 .product-card__button {
+  @include link;
   @include button;
   padding: 10px;
   --size: 16px;
