--- a/source/sass/blocks/show.scss
+++ b/source/sass/blocks/show.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: end;
 
   &::before,
   &::after {
@@ -57,6 +58,6 @@
   padding: 10px;
   width: 100%;
   background-color: #f2f2f2;
-  color: var(--additional-color);
+  color: $dark-gray;
   text-align: center;
 }
