--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -1,16 +1,30 @@
 .slider {
   @media #{$mobile-only} {
-    background-color: #eaeaea;
+    background-color: $additional-gray;
+  }
+
+  @media #{$not-mobile} {
+    background: linear-gradient(#ffffff 619px, $additional-gray 619px);
+  }
+
+  @media #{$desktop-only} {
+    background: linear-gradient(#ffffff 205px, $gray 205px);
   }
 }
 
 .slider__container {
+  @include centerer;
   padding: 25px 0 40px 0;
+
+  @media #{$not-mobile} {
+    padding-bottom: 100px;
+  }
 
   @media #{$desktop-only} {
     display: grid;
     gap: var(--gap);
     grid-template-columns: repeat(var(--column-count, 2), 1fr);
+    padding-bottom: 75px;
   }
 }
 
@@ -26,6 +40,10 @@
     margin-bottom: 63px;
     --size: 60px;
   }
+
+  @media #{$desktop-only} {
+    margin-bottom: 146px;
+  }
 }
 
 .slider__content {
@@ -33,6 +51,7 @@
 
   @media #{$desktop-only} {
     grid-column: 1/2;
+    max-width: 436px;
   }
 }
 
@@ -53,20 +72,22 @@
 
   @media #{$not-mobile} {
     --column-count: 3;
+    margin-bottom: 99px;
   }
 
   @media #{$desktop-only} {
     --column-count: 2;
     --gap: 60px 42px;
+    margin-bottom: 0;
   }
 }
 
 .slider__outlay-meaning {
-  font-family: var(--accent-font);
+  font-family: $accent-font;
   font-size: 24px;
   line-height: 1;
   order: -1;
-  margin: 0;
+  margin: 0 0 15px 0;
   padding: 15px 43px 18px 43px;
   text-align: center;
 
@@ -77,13 +98,25 @@
 }
 
 .slider__outlay-characteristic {
-  color: var(--additional-color);
+  color: $dark-gray;
   font-size: 12px;
   line-height: 1;
   text-align: center;
+  width: 87px;
+  height: 30px;
+  background-color: $additional-gray;
+  margin: -20px auto;
+  padding: 1px 4px;
 
   @media #{$not-mobile} {
     font-size: 14px;
+    background-color: #ffffff;
+    width: auto;
+    padding: 1px 10px 0 8px;
+  }
+
+  @media #{$desktop-only} {
+    background-color: $gray;
   }
 }
 
@@ -95,7 +128,7 @@
 }
 
 .slider__characteristic--total {
-  font-family: var(--accent-font);
+  font-family: $accent-font;
   line-height: 1.4;
   border: none;
   grid-column: 1/-1;
@@ -128,32 +161,59 @@
 .slider__image-wrapper {
   margin: 0 auto;
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr;
+  grid-template-columns: 50% auto 50%;
   width: min(100%, 280px);
   aspect-ratio: 280/256;
 
   @media #{$not-mobile} {
     width: min(100%, 560px);
   }
+
+  @media #{$desktop-only} {
+    grid-column: 2/3;
+    grid-row: 1/3;
+    margin-top: 49px;
+  }
 }
 
 .slider__image {
   @include img;
   display: block;
+  width: 100%;
   height: 100%;
-  grid-column: 1/2;
-  grid-row: 1/2;
 
-  &--state_before {
-    width: 50%;
+  &--state-before {
     object-position: left;
-    justify-self: start;
   }
 
-  &--state_after {
-    width: 50%;
+  &--state-after {
     object-position: right;
-    justify-self: end;
   }
+}
+
+.slider__control {
+  position: relative;
+  width: 4px;
+  height: 256px;
+  background-color: #666666;
+  border-radius: 2px;
+
+  @media #{$not-mobile} {
+    height: 512px;
+  }
+}
+
+.slider__button {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: solid 2px #666666;
+  background-image: url("../img/stack.svg#slider-arrow");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 24px 18px;
 }
