--- a/source/sass/blocks/special-offer.scss
+++ b/source/sass/blocks/special-offer.scss
@@ -11,10 +11,27 @@
     content: "";
     width: 100%;
     height: 290px;
-    background-color: var(--accent-color);
+    background-color: $green;
     opacity: 0.85;
     top: 0;
     left: 0;
+  }
+
+  &::after {
+    position: absolute;
+    content: "";
+    width: 82px;
+    height: 82px;
+    top: 59px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-image: url("../img/stack.svg#gift");
+
+    @media #{$tablet-only} {
+      top: 50%;
+      left: 77px;
+      transform: translateY(-50%);
+    }
   }
 
   @media #{$not-mobile} {
