--- a/source/sass/global/mixins.scss
+++ b/source/sass/global/mixins.scss
@@ -13,10 +13,10 @@
   cursor: pointer;
   border: none;
   padding: 14px 26px;
-  font-family: var(--accent-font);
+  font-family: $accent-font;
   font-size: var(--size, inherit);
   line-height: var(--line, inherit);
-  background-color: var(--accent-color);
+  background-color: $green;
   text-transform: uppercase;
   color: #ffffff;
   text-align: center;
@@ -24,7 +24,7 @@
 
 @mixin link {
   display: block;
-  font-family: var(--accent-font);
+  font-family: $accent-font;
   font-size: var(--size);
   line-height: var(--line);
   text-decoration: none;
@@ -36,10 +36,10 @@
   --size: 36px;
   --line: 1;
   --weight: 400;
-  font-family: var(--accent-font);
+  font-family: $accent-font;
   font-size: var(--size);
   line-height: var(--line);
-  color: var(--main-color);
+  color: $black;
   font-weight: var(--weight);
 }
 
@@ -47,9 +47,49 @@
   --size: 14px;
   --line: 1.3;
   --weight: 400;
-  font-family: var(--main-font);
+  font-family: $main-font;
   font-size: var(--size);
   line-height: var(--line);
-  color: var(--main-color);
+  color: $black;
   font-weight: var(--weight);
+}
+
+@mixin centerer {
+  margin-inline: 20px;
+
+  @media #{$not-mobile} {
+    margin-inline: 30px;
+  }
+
+  @media #{$desktop-only} {
+    inline-size: 1220px;
+    margin-inline: auto;
+  }
+}
+
+@mixin shape {
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+}
+
+@mixin input {
+  --color: #e7e7e7;
+  padding: 14px 20px 13px 20px;
+  font-family: $accent-font;
+  font-size: 16px;
+  line-height: 1.13;
+  text-transform: uppercase;
+  color: $dark-gray;
+  border: solid 1px var(--color);
+
+  @media #{$not-mobile} {
+    font-size: 20px;
+    line-height: 1.5;
+    padding: 10px 20px;
+  }
 }
