--- a/source/sass/blocks/additional.scss
+++ b/source/sass/blocks/additional.scss
@@ -5,7 +5,7 @@
     --gap: 80px;
     display: grid;
     gap: var(--gap);
-    grid-template-columns: calc(100% - 80px - 20%) 20%;
+    grid-template-columns: calc(100% - var(--gap) - 20%) 20%;
   }
 }
 
@@ -19,9 +19,12 @@
 
 .additional__title {
   @include title;
+  @include green-stripes;
+  position: relative;
   --size: 24px;
   --line: 1.5;
   margin: 0 0 36px 0;
+  width: fit-content;
 
   @media #{$not-mobile} {
     --size: 36px;
