--- a/source/sass/blocks/show.scss
+++ b/source/sass/blocks/show.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: end;
+  justify-content: flex-end;
 
   &::before,
   &::after {
@@ -18,7 +18,9 @@
   }
 
   @media #{$not-mobile} {
-    padding: 164px 37px 38px 38px;
+    margin-top: 80px;
+    padding: 84px 37px 38px 38px;
+    border: solid 2px $gray;
   }
 }
 
