--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -26,7 +26,7 @@
     flex-direction: column;
     padding: 0;
 
-    .main-navigation__toggle {
+    .main-header__toggle-navigation {
       display: none;
     }
 
