--- a/source/sass/blocks/main-navigation.scss
+++ b/source/sass/blocks/main-navigation.scss
@@ -4,7 +4,7 @@
   @media #{$mobile-only} {
     display: none;
 
-    + .main-navigation__toggle::before {
+    + .main-header__toggle-navigation::before {
       content: "";
       position: absolute;
       top: 0;
@@ -27,7 +27,7 @@
       left: 0;
       z-index: 2;
 
-      + .main-navigation__toggle {
+      + .main-header__toggle-navigation {
         background-color: #ffffff;
 
         &::before,
@@ -113,7 +113,7 @@
   }
 }
 
-.main-navigation__toggle {
+.main-header__toggle-navigation {
   cursor: pointer;
   position: relative;
   display: none;
