--- a/source/sass/blocks/additional-card.scss
+++ b/source/sass/blocks/additional-card.scss
@@ -1,21 +1,20 @@
 .additional-card {
   padding: 12px 0 19px 0;
-  --gap: 13px;
+  gap: 13px;
   display: grid;
-  gap: var(--gap);
   grid-template-columns: 1fr 1fr;
   border-top: solid 1px #cdcdcd;
   border-bottom: solid 1px #cdcdcd;
 
   @media #{$not-mobile} {
-    --gap: 25px;
+    gap: 25px;
     grid-template-columns: 3fr 1fr 0.5fr;
     padding: 26px 38px 28px 38px;
   }
 
   @media #{$desktop-only} {
     padding: 15px 0 17px 0;
-    --gap: 40px;
+    gap: 40px;
     grid-template-columns: 1fr 1fr auto 1fr;
     align-items: center;
   }
