--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -12,7 +12,7 @@
 .copyright__link {
   @include link;
   text-transform: none;
-  font-family: var(--main-family);
+  font-family: $main-font;
   font-size: 16px;
   line-height: 1.2;
 }
