--- a/source/sass/blocks/idea.scss
+++ b/source/sass/blocks/idea.scss
@@ -6,20 +6,19 @@
   @include reset-list;
   margin: 0;
   padding-bottom: 49px;
-  --gap: 20px;
   display: grid;
-  gap: var(--gap);
+  gap: 20px;
   grid-template-columns: repeat(var(--column-count, 1), 1fr);
 
   @media #{$not-mobile} {
     --column-count: 2;
-    --gap: 134px 153px;
+    gap: 134px 153px;
     padding-bottom: 104px;
   }
 
   @media #{$desktop-only} {
     --column-count: 4;
-    --gap: 80px;
+    gap: 80px;
   }
 }
 
