--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -22,8 +22,7 @@
 
   @media #{$desktop-only} {
     display: grid;
-    gap: var(--gap);
-    grid-template-columns: repeat(var(--column-count, 2), 1fr);
+    grid-template-columns: repeat(2, 1fr);
     padding-bottom: 75px;
   }
 }
@@ -64,10 +63,9 @@
 }
 
 .slider__outlay {
-  --gap: 32px;
   padding: 0;
   display: grid;
-  gap: var(--gap);
+  gap: 32px;
   grid-template-columns: repeat(var(--column-count, 2), 1fr);
 
   @media #{$not-mobile} {
@@ -77,7 +75,7 @@
 
   @media #{$desktop-only} {
     --column-count: 2;
-    --gap: 60px 42px;
+    gap: 60px 42px;
     margin-bottom: 0;
   }
 }
